# java-annotator

./: Cargo.toml  LICENSE  README.md
java/: A.java  Enum.java
java/a/: B.java
java/a/b/: C.java
src/: annotator.rs  declaration.rs  io.rs  main.rs
